--- a/opdrachten/week 2/video/index.html
+++ b/opdrachten/week 2/video/index.html
@@ -21,10 +21,11 @@
 				</ul>
 			</nav>
 		</header> -->
-		<video src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" autoplay poster="http://camendesign.com/code/video_for_everybody/poster.jpg" controls>
-			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" controls></source>
-			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" controls></source>
-			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webvtt" controls></source>
+		<video poster="http://camendesign.com/code/video_for_everybody/poster.jpg" controls>
+			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" />
+			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" />
+			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" />
+			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webvtt" />
 		</video>
 		<!--<footer></footer>-->
 	</body>
