--- a/opdrachten/week 2/video/index.html
+++ b/opdrachten/week 2/video/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="Lex Dekker">
 		<meta name="description" content="opdracht 1, opleiding, CMD, Amsterdam, HvA">
-		<meta name="keywords" content="lex, dekker, les, 1, semantiek, html5, opdracht, opleiding, studieprogramma, beroepen">
+		<meta name="keywords" content="lex, dekker, les, 2, semantiek, html5, opdracht, video">
   		<title>video</title>
 	</head>
 	<body>
