--- a/deeltoets1/Info_cmd/index.html
+++ b/deeltoets1/Info_cmd/index.html
@@ -6,34 +6,28 @@
 		<meta name="description" content="opdracht 1, opleiding, CMD, Amsterdam, HvA">
 		<meta name="keywords" content="lex, dekker, les, 1, semantiek, html5, opdracht, opleiding, studieprogramma, beroepen">
   		<title>Opleiding - CMD Amsterdam</title>
-  		<link rel="stylesheet" href="static/css/layout.css">
 	</head>
 	<body>
-		<!--<header>
-			<nav>
-				<ul>
-					<li>
-						<a href=""></a>
-						<a href=""></a>
-						<a href=""></a>
-						<a href=""></a>
-						<a href=""></a>
-					</li>
-				</ul>
-			</nav>
-		</header> -->
 		<article>
 			<section>
-				<h1>Opleiding</h1>
-				<h2>CMD Amsterdam</h2>
+				<header>
+					<h1>Opleiding</h1>
+					<h2>CMD Amsterdam</h2>
+				</header>
 				<p>De opleiding Communication & Multimedia Design (CMD) Amsterdam leert studenten alles over het ontwerpen van online interactieve media. Dit betekent het begrijpen, bedenken en maken van interactieve media zoals websites, mobiele applicaties en interactieve televisie. Bij het ontwerpen van interactieve media staat de mens centraal. Niet alleen als eindgebruiker van een toepassing maar ook in de context van zijn leefomgeving. Studenten doen toegepast onderzoek en leren hun ontwerpen te testen op usability, gebruikersbehoefte en meetbare eindresultaten. Ze leren werken in multidisciplinaire projectteams aan opdrachten voor echte projectpartners.</p>
 
 				<p>De vakken <a href="http://intra.iam.hva.nl/content/algemeen/studieprogramma/" target="_blank">opbouw studieprogramma</a> gaan over interactie & strategie, -design, - techniek en -cultuur. In de vakken leren studenten te denken en te handelen als een ontwerper. Hiervoor leren ze naast ‘ontwerpen’ ook ‘maken’, ‘onderzoeken’, ‘projectmanagen’ en ‘adviseren’. Studenten kunnen met behulp van keuzevakken, stages en minoren zelf richting geven aan hun opleiding. Na hun afstuderen komen studenten te werken in de creatieve industrie, gericht op de sector ‘nieuwe media’. Het werkveld waarin de interactieve media ontwerper zich begeeft is sterk in ontwikkeling. De opleiding houdt hier met een flexibel curriculum rekening mee en door met (keuze)vakken en projecten in te springen op nieuwe ontwikkelingen.</p>
+				<video poster="http://camendesign.com/code/video_for_everybody/poster.jpg" alt="video over big buck bunny" controls>
+					<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" />
+					<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" />
+					<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" />
+					<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webvtt" />
+				</video>
 				<embed src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" alt="video over big buck bunny">
 			</section>
 
 			<section>
-				<h3 class="geen_witr">Ontwerp opleiding voor Interactieve Media</h3>
+				<h3>Ontwerp opleiding voor Interactieve Media</h3>
 				<p>CMD Amsterdam stelt ontwerpen centraal in de opleiding. Zij wil studenten leren te denken als een ontwerper en opleiden tot interactieve media ontwerpers met een goede aansluiting op de huidige én de toekomstige beroepspraktijk.</p>
 
 				<p><i>CMD Amsterdam is een ontwerpopleiding die studenten opleidt om te denken als een ontwerper bij het ontwikkelen van interactieve toepassingen;</i></p>
@@ -59,8 +53,8 @@
 				<p>Afgestudeerde studenten komen daarmee in aanmerking voor o.a. de volgende vijf beroepen: Visual Interface Designer, Frontend Developer, Projectmanager, Contentmanager en Interaction Designer. Variaties hierop zijn natuurlijk mogelijk.</p>
 
 				<p>Mocht je als aankomend student meer willen weten of contact op willen nemen met een afgestudeerde studenten? Neem <a href="" target="_blank">contact</a> met ons op.</p>
-
-				<h4 class="geen_witr">Uitstroomberoepen:</h4>
+				
+				<h4>Uitstroomberoepen:</h4>
 				<ol>
 					<li><a href="http://intra.iam.hva.nl/content/algemeen/beroepsrollen/frontend_developer/" target="_blank">Frontend developer</a></li>
 					<li><a href="http://intra.iam.hva.nl/content/algemeen/beroepsrollen/visual_interface_designer/" target="_blank">Visual designer</a></li>
@@ -70,6 +64,5 @@
 				</ol>
 			</section>
 		</article>
-		<footer></footer>
 	</body>
 </html>
