--- a/deeltoets1/Formulier/index.html
+++ b/deeltoets1/Formulier/index.html
@@ -46,23 +46,10 @@
 					</li>
 					<li>
 						<label for="email">E-mail:</label>
-						<input type="email" id="email" placeholder="voorbeeld@mail.nl" />
+						<input type="email" id="email" placeholder="voorbeeld@mail.nl" required />
 					</li>
 				</ul>
 			</fieldset>
-
-			<!--<fieldset>
-				<legend>Dingetjes</legend>
-				<label for="color">Lievelingskleur:</label>
-				<input type="color" id="color" />
-
-				<label for="month">Leukste maand:</label>
-				<input type="month" id="month" />
-
-				<label for="slider">Afstand:</label>
-				<input type="range" id="range" min="0" max="100" step="1" oninput="amount.value=range.value" />
-				<output name="amount" for="range">0</output>
-			</fieldset>-->
 
 			<fieldset>
 				<legend>Ik wil me aanmelden</legend>
@@ -91,23 +78,23 @@
 					</li>
 					<li>
 						<label>Opdrachtomschrijving:</label>
-						<textarea placeholder="Beschrijf uw opdrachtomschrijving."></textarea>
+						<textarea placeholder="Beschrijf uw opdrachtomschrijving." required></textarea>
 					</li>
 					<li>
 						<label>Doelgroepomschrijving</label>
-						<textarea placeholder="Beschrijf uw doelgroepsomschrijving."></textarea>
+						<textarea placeholder="Beschrijf uw doelgroepsomschrijving." required></textarea>
 					</li>
 					<li>
 						<label>Doelstelling/ intentie van het project:</label>
-						<textarea placeholder="Beschrijf uw doelstelling."></textarea>
+						<textarea placeholder="Beschrijf uw doelstelling." required></textarea>
 					</li>
 					<li>
 						<label for="month">Looptijd:</label>
-						<input type="month" id="month"/>
+						<input type="month" id="month" required />
 					</li>
 					<li>
 						<label for="date">Deadline:</label>
-						<input type="date" id="date" />
+						<input type="date" id="date" required />
 					</li>
 				</ol>
 				</fieldset>
@@ -143,7 +130,6 @@
 					<label>Opmerking:</label>
 					<textarea placeholder="Laat hiet uw opmerking achter."></textarea>
 				</fieldset>
-
 			</fieldset>
 		</form>
 
@@ -184,7 +170,7 @@
 						</ul>
 						<li>
 							<label for="date">Begin datum</label>
-							<input type="date" id="s-date" />
+							<input type="date" id="s-date" required />
 						</li>
 					</ol>
 				</fieldset>
@@ -194,7 +180,7 @@
 					<ol>
 						<li>
 							<label>Beschrijving stagewerkzaamheden:</label>
-							<textarea placeholder="Beschrijg uw stagewerkzaamheden"></textarea>
+							<textarea placeholder="Beschrijg uw stagewerkzaamheden" required></textarea>
 						</li>
 					</ol>
 				</fieldset>
@@ -224,7 +210,7 @@
 						</li>
 						<li>
 							<label>Core Business:</label>
-							<textarea placeholder="Wat is de Core Business van uw bedrijf?"></textarea>
+							<textarea placeholder="Wat is de Core Business van uw bedrijf?" required></textarea>
 						</li>
 					</ol>
 				</fieldset>
@@ -232,7 +218,7 @@
 				<fieldset>
 					<legend>Laat een opmerking achter</legend>
 					<label>Opmerking:</label>
-					<textarea placeholder="Laat hiet uw opmerking achter."></textarea>
+					<textarea placeholder="Laat hier uw opmerking achter."></textarea>
 				</fieldset>
 			</fieldset>
 		</form>
