--- a/deeltoets1/Formulier/index.html
+++ b/deeltoets1/Formulier/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="author" content="Lex Dekker">
-		<meta name="description" content="opdracht 1, opleiding, CMD, Amsterdam, HvA">
-		<meta name="keywords" content="lex, dekker, les, 2, semantiek, html5, opdracht, video">
+		<meta name="description" content="deeltoets1 voor frontend development CMD, Amsterdam, HvA">
+		<meta name="keywords" content="lex, dekker, deeltoets 1, semantiek, html5, formulier, opdracht, video">
   		<title>Formulier</title>
 	</head>
 	<body>
@@ -72,31 +72,31 @@
 				<fieldset>
 					<legend>Project gegevens</legend>
 					<ol>
-					<li>
-						<label for="titel">Titel:</label>
-						<input type="text" id="titel" placeholder="CMD Aan" required />
-					</li>
-					<li>
-						<label>Opdrachtomschrijving:</label>
-						<textarea placeholder="Beschrijf uw opdrachtomschrijving." required></textarea>
-					</li>
-					<li>
-						<label>Doelgroepomschrijving</label>
-						<textarea placeholder="Beschrijf uw doelgroepsomschrijving." required></textarea>
-					</li>
-					<li>
-						<label>Doelstelling/ intentie van het project:</label>
-						<textarea placeholder="Beschrijf uw doelstelling." required></textarea>
-					</li>
-					<li>
-						<label for="month">Looptijd:</label>
-						<input type="month" id="month" required />
-					</li>
-					<li>
-						<label for="date">Deadline:</label>
-						<input type="date" id="date" required />
-					</li>
-				</ol>
+						<li>
+							<label for="titel">Titel:</label>
+							<input type="text" id="titel" placeholder="CMD Aan" required />
+						</li>
+						<li>
+							<label>Opdrachtomschrijving:</label>
+							<textarea placeholder="Beschrijf uw opdrachtomschrijving." required></textarea>
+						</li>
+						<li>
+							<label>Doelgroepomschrijving</label>
+							<textarea placeholder="Beschrijf uw doelgroepsomschrijving." required></textarea>
+						</li>
+						<li>
+							<label>Doelstelling/ intentie van het project:</label>
+							<textarea placeholder="Beschrijf uw doelstelling." required></textarea>
+						</li>
+						<li>
+							<label for="month">Looptijd:</label>
+							<input type="month" id="month" required />
+						</li>
+						<li>
+							<label for="date">Deadline:</label>
+							<input type="date" id="date" required />
+						</li>
+					</ol>
 				</fieldset>
 
 				<fieldset>
@@ -157,17 +157,19 @@
 				<fieldset>
 					<legend>Tijdsduur stage</legend>
 					<ol>
-						<li><label>Hoe lang is de stage?</label></li>
-						<ul>
-							<li>
-								<input type="radio" id="10-weken" name="aanmelden" value="stage" required />
-								<label>10 weken</label>
-							</li>
-							<li>
-								<input type="radio" id="20-weken" name="aanmelden" value="stage" required />
-								<label>20 weken</label>
-							</li>
-						</ul>
+						<li>
+							<label>Hoe lang is de stage?</label>
+							<ul>
+								<li>
+									<input type="radio" id="10-weken" name="aanmelden" value="stage" required />
+									<label>10 weken</label>
+								</li>
+								<li>
+									<input type="radio" id="20-weken" name="aanmelden" value="stage" required />
+									<label>20 weken</label>
+								</li>
+							</ul>
+						</li>
 						<li>
 							<label for="date">Begin datum</label>
 							<input type="date" id="s-date" required />
