--- a/deeltoets1/Formulier/index.html
+++ b/deeltoets1/Formulier/index.html
@@ -131,6 +131,7 @@
 					<textarea placeholder="Laat hiet uw opmerking achter."></textarea>
 				</fieldset>
 			</fieldset>
+			<input type="submit" />
 		</form>
 
 		<form>
@@ -223,6 +224,7 @@
 					<textarea placeholder="Laat hier uw opmerking achter."></textarea>
 				</fieldset>
 			</fieldset>
+			<input type="submit" />
 		</form>
 	</body>
 </html>
